# sentic-notifier

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/chart/: Chart.yaml  values-dev.yaml  values.yaml
deploy/chart/templates/: _helpers.tpl  deployment.yaml
sentic_notifier/: __init__.py  main.py  models.py
sentic_notifier/consumer/: rabbitmq_consumer.py
sentic_notifier/notifier/: __init__.py  telegram.py
tests/: conftest.py
tests/integration/: test_verify_chat.py
tests/unit/: test_telegram_notifier.py
