[tool.poetry]
name = "sentic-notifier"
version = "0.1.0"
description = "Sentic Notifier microservice"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^9.0"
pydantic = "^2.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
